Horde Editor compiles with qt6 and shows sample 3d scene. Currently has various quirks, like 3d scene is not shown by default, shows only when clicking on a scene item. Other changed parts are not tested yet.

--- a/Horde3DEditor/CMakeLists.txt
+++ b/Horde3DEditor/CMakeLists.txt
@@ -4,9 +4,9 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 
-find_package(Qt6 COMPONENTS Widgets Gui Core Xml OpenGL)
+find_package(Qt6 COMPONENTS Widgets Gui Core Xml OpenGL OpenGLWidgets)
 if( Qt6_FOUND )
-    SET(QT_LIBRARIES "Qt6::Widgets;Qt6::Gui;Qt6::Core;Qt6::Xml;Qt6::OpenGL")
+    SET(QT_LIBRARIES "Qt6::Widgets;Qt6::Gui;Qt6::Core;Qt6::Xml;Qt6::OpenGL;Qt6::OpenGLWidgets")
     FUNCTION(QT4_ADD_RESOURCES)
     ENDFUNCTION(QT4_ADD_RESOURCES)
 
