--- a/Horde3DEditor/src/EditorLib/CMakeLists.txt
+++ b/Horde3DEditor/src/EditorLib/CMakeLists.txt
@@ -12,6 +12,20 @@ SET(EditorLib_HEADERS
 
 INCLUDE_DIRECTORIES("../../include" ${CMAKE_BINARY_DIR} ${LUA_INCLUDE_DIR})
 
+if( Qt6_FOUND )
+	INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt6Widgets_INCLUDE_DIRS} ${Qt6Core_INCLUDE_DIRS} )
+
+	list( APPEND EditorLib_SOURCES
+		QRegExp.cpp
+	)
+
+	list( APPEND EditorLib_HEADERS
+		QRegExp.h
+	)
+else()
+	INCLUDE_DIRECTORIES(../../include ${QT_INCLUDES} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS} )
+endif()
+
 #INCLUDE(${QT_USE_FILE})
 
 ADD_DEFINITIONS(${QT_DEFINITIONS})
