--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,10 @@ ipch/
 _ReSharper*/
 *.[Rr]e[Ss]harper
 
+# JetBrains IDE files
+.idea
+cmake-build-*
+
 # TeamCity is a build add-in
 _TeamCity*
 
