You can now successfully build the knight example using emscripten

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -193,3 +193,8 @@ if( ${CMAKE_SYSTEM_NAME} MATCHES "iOS" )
 	target_link_libraries(Horde3D ${EGL_LIBRARIES} ${OPENGLES2_LIBRARIES} ${HORDE3D_EXTENSION_LIBS})
 	target_link_libraries(Horde3D "-framework OpenGLES")
 endif()
+
+if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten" )
+	# just make sure the extension libs are linked
+	target_link_libraries(Horde3D ${HORDE3D_EXTENSION_LIBS})
+endif()
