Enabled OpenGL ES3 for emscripten builds. had to remove all the compute call though, as emscripten does not support 'glDispatchCompute' and co
(cherry picked from commit 03d49751991517436e9df9f1cdf7458d41307404)

--- a/Horde3D/Source/Horde3DEngine/CMakeLists.txt
+++ b/Horde3D/Source/Horde3DEngine/CMakeLists.txt
@@ -110,14 +110,14 @@ endif( USE_NULL )
 configure_file( config.h.in ${CMAKE_BINARY_DIR}/config.h )
 
 # For all platforms except iOS, engine is built as shared library
-if (${CMAKE_SYSTEM_NAME} MATCHES "iOS")
+if (${CMAKE_SYSTEM_NAME} MATCHES "iOS" OR ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten" )
 	add_library(Horde3D STATIC ${HORDE3D_SOURCES} )
-else(${CMAKE_SYSTEM_NAME} MATCHES "iOS")
+else(${CMAKE_SYSTEM_NAME} MATCHES "iOS" OR ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten" )
 # Other platforms
 	add_library(Horde3D SHARED
 		${HORDE3D_SOURCES}
 		)
-endif(${CMAKE_SYSTEM_NAME} MATCHES "iOS")
+endif(${CMAKE_SYSTEM_NAME} MATCHES "iOS" OR ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten" )
 
 option(RAPIDXML_NO_EXCEPTIONS "Disabling rapidxml exceptions will terminating application on xml parsing error" ON)
 if (RAPIDXML_NO_EXCEPTIONS)
