Fixed issue where you need to generate the build files trough cmake 2ce in a row in order to enable OpenGLES3 for the application, for Emscripten, and possibly also Android and iOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,32 +77,10 @@ else()
     message("Not building examples.")
 endif(HORDE3D_BUILD_EXAMPLES)
 
-# Render backend selection
+# Render backend selection defaults
 option(HORDE3D_USE_GL2 "Add OpenGL 2 render backend. Turns off ES3 render backend." ON)
 option(HORDE3D_USE_GL4 "Add OpenGL 4 render backend. Turns off ES3 render backend." ON)
 option(HORDE3D_USE_GLES3 "Add OpenGL ES 3 render backend. Turns off desktop GL backends." OFF)
-
-if(HORDE3D_USE_GLES3)
-	set(USE_GLES3 TRUE)
-	set(HORDE3D_USE_GL2 OFF CACHE BOOL "Add OpenGL 2 render backend. Turns off ES3 render backend." FORCE)
-	set(HORDE3D_USE_GL4 OFF CACHE BOOL "Add OpenGL 4 render backend. Turns off ES3 render backend." FORCE)
-endif(HORDE3D_USE_GLES3)
-
-if(HORDE3D_USE_GL2 OR HORDE3D_USE_GL4)
-	if(HORDE3D_USE_GL2)
-		set(USE_GL2 TRUE)
-	endif(HORDE3D_USE_GL2)
-	
-	if(HORDE3D_USE_GL4)
-		set(USE_GL4 TRUE)
-	endif(HORDE3D_USE_GL4)
-	
-	set(HORDE3D_USE_GLES3 OFF CACHE BOOL "Add OpenGL ES 3 render backend. Turns off desktop GL backends." FORCE)
-endif(HORDE3D_USE_GL2 OR HORDE3D_USE_GL4)
-
-if (NOT HORDE3D_USE_GL2 AND NOT HORDE3D_USE_GL4 AND NOT HORDE3D_USE_GLES3 )
-    message( SEND_ERROR "Rendering backend is not selected!")
-endif()
 
 # Set binaries output folder.
 SET(HORDE3D_OUTPUT_PATH_PREFIX "${PROJECT_BINARY_DIR}/Binaries")
@@ -175,6 +153,28 @@ IF(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 ENDIF(MSVC)
 
+# Render backend selection
+if(HORDE3D_USE_GLES3)
+    set(USE_GLES3 TRUE)
+    set(HORDE3D_USE_GL2 OFF CACHE BOOL "Add OpenGL 2 render backend. Turns off ES3 render backend." FORCE)
+    set(HORDE3D_USE_GL4 OFF CACHE BOOL "Add OpenGL 4 render backend. Turns off ES3 render backend." FORCE)
+endif(HORDE3D_USE_GLES3)
+
+if(HORDE3D_USE_GL2 OR HORDE3D_USE_GL4)
+    if(HORDE3D_USE_GL2)
+        set(USE_GL2 TRUE)
+    endif(HORDE3D_USE_GL2)
+
+    if(HORDE3D_USE_GL4)
+        set(USE_GL4 TRUE)
+    endif(HORDE3D_USE_GL4)
+
+    set(HORDE3D_USE_GLES3 OFF CACHE BOOL "Add OpenGL ES 3 render backend. Turns off desktop GL backends." FORCE)
+endif(HORDE3D_USE_GL2 OR HORDE3D_USE_GL4)
+
+if (NOT HORDE3D_USE_GL2 AND NOT HORDE3D_USE_GL4 AND NOT HORDE3D_USE_GLES3 )
+    message( SEND_ERROR "Rendering backend is not selected!")
+endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG" )
 
