--- a/Horde3D/Samples/CMakeLists.txt
+++ b/Horde3D/Samples/CMakeLists.txt
@@ -4,10 +4,10 @@ include_directories(../../Extensions/Overlays/Bindings/C++)
 add_subdirectory(Framework)
 add_subdirectory(Chicago)
 add_subdirectory(Knight)
-add_subdirectory(Tessellator)
 
 if( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten" )
     add_subdirectory(ParticleVortex) # Compute shaders are not supported on Emscripten, which is what this example uses
+    add_subdirectory(Tessellator)    # requires OpenGLES 3.2, but WebGL only supports OpenGLES 3.0
 endif()
 
 IF(HORDE3D_USE_GLFW)
